# voxelization

./: .gitignore  CMakeLists.txt  CODEX_STEWART_README.md  README.md  README_2.md  main.cpp
docs/: CODE_WALKTHROUGH.md  COURSE_ANALYSIS.md  OVERHEAD_COMPARISON.md
include/: voxelize.h
jobs/: khipu-cpu-small.sbatch  khipu-cuda-atomic-small.sbatch  khipu-cuda-smoke.sbatch  khipu-env-smoke.sbatch  khipu-mpi-debug.sbatch
models/: README.md  download_stanford_bunny.sh  generate_blocky_models.py
report/: IEEE-conference-template-062824.fdb_latexmk  IEEE-conference-template-062824.fls  IEEE-conference-template-062824.tex  README.md  REFERENCES.md  figures.py  main.fdb_latexmk  main.fls  main.tex  main_2.tex  main_es.tex
results/: khipu_cpu_small_summary_20260705.csv  khipu_cuda_atomic_summary_20260705.csv  local_summary_20260705.csv  local_summary_median_20260705.csv  metrics.csv  overhead_summary.csv
results/raw/: stanford_bunny_r128_p1_rep1.txt  stanford_bunny_r128_p1_rep2.txt  stanford_bunny_r128_p1_rep3.txt  stanford_bunny_r128_p2_rep1.txt  stanford_bunny_r128_p2_rep2.txt  stanford_bunny_r128_p2_rep3.txt  stanford_bunny_r128_p4_rep1.txt  stanford_bunny_r128_p4_rep2.txt  stanford_bunny_r128_p4_rep3.txt  stanford_bunny_r128_p8_rep1.txt  stanford_bunny_r128_p8_rep2.txt  stanford_bunny_r128_p8_rep3.txt  stanford_bunny_r32_p1_rep1.txt  stanford_bunny_r32_p1_rep2.txt  stanford_bunny_r32_p1_rep3.txt  stanford_bunny_r32_p2_rep1.txt  stanford_bunny_r32_p2_rep2.txt  stanford_bunny_r32_p2_rep3.txt  stanford_bunny_r32_p4_rep1.txt  stanford_bunny_r32_p4_rep2.txt  stanford_bunny_r32_p4_rep3.txt  stanford_bunny_r32_p8_rep1.txt  stanford_bunny_r32_p8_rep2.txt  stanford_bunny_r32_p8_rep3.txt  stanford_bunny_r64_p1_rep1.txt  stanford_bunny_r64_p1_rep2.txt  stanford_bunny_r64_p1_rep3.txt  stanford_bunny_r64_p2_rep1.txt  stanford_bunny_r64_p2_rep2.txt  stanford_bunny_r64_p2_rep3.txt  stanford_bunny_r64_p4_rep1.txt  stanford_bunny_r64_p4_rep2.txt  stanford_bunny_r64_p4_rep3.txt  stanford_bunny_r64_p8_rep1.txt  stanford_bunny_r64_p8_rep2.txt  stanford_bunny_r64_p8_rep3.txt  stanford_bunny_r96_p1_rep1.txt  stanford_bunny_r96_p1_rep2.txt  stanford_bunny_r96_p1_rep3.txt  stanford_bunny_r96_p2_rep1.txt  (+8 more)
scripts/: analyze_overhead.py  plot_results.py  prepare_bunny.py  run_experiments.py
src/: voxelize.cpp  voxelize_cuda.cu
